--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@ DSAndML/Lib
 DSAndML/Scripts
 *.cfg
 DSAndML\Probability\tempCodeRunnerFile.R
+DSAndML\Probability\tempCodeRunnerFile.py
+Probability\tempCodeRunnerFile.R
+Probability\tempCodeRunnerFile.py
+DSAndML\statistics\tempCodeRunnerFile.py
