--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ DSAndML\Probability\tempCodeRunnerFile.py
 Probability\tempCodeRunnerFile.R
 Probability\tempCodeRunnerFile.py
 DSAndML\statistics\tempCodeRunnerFile.py
+*.txt
