--- a/.gitignore
+++ b/.gitignore
@@ -9,4 +9,5 @@ DSAndML\Probability\tempCodeRunnerFile.py
 Probability\tempCodeRunnerFile.R
 Probability\tempCodeRunnerFile.py
 DSAndML\statistics\tempCodeRunnerFile.py
+DSAndML\ProbabilityDistributions\tempCodeRunnerFile.py
 *.txt
