gitignore DAV-checkpoint file ignored

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ DSAndML/Scripts
 DSAndML/etc
 DSAndML/share
 DSAndML/.ipynb_chekpoints
+DSAndML/CollegePracticals_DAV/.ipynb_checkpoints
 DSAndML/Jupyternotebook/.ipynb_checkpoints
 *.cfg
 DSAndML\Probability\tempCodeRunnerFile.R
